--- a/todo-client/src/App.css
+++ b/todo-client/src/App.css
@@ -1,18 +1,164 @@
+.container {
+  width: 100%;
+  height: 100%;
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.todoFormWrapper {
+  width: 600px;
+  height: 100px;
+  display: flex;
+  gap: 15px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  /* border: solid 5px black; */
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+}
+.todoFormWrapper > input {
+  width: 350px;
+  height: 40px;
+  padding: 0px 10px;
+  border-radius: 10px;
+  border: none;
+  /* border: solid 2px black; */
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+}
+.todoFormWrapper > input:hover {
+  /* border: solid 5px gold; */
+  opacity: 0.8;
+}
+.todoFormWrapper > input:focus {
+  /* border: solid 5px gold; */
+  opacity: 0.8;
+  outline: none;
+}
+.todoFormWrapper > label {
+  height: 30px;
+  width: fit-content;
+  display: flex;
+  padding: 0px 8px;
+  gap: 5px;
+  align-items: center;
+  border-radius: 10px;
+  background-color: var(--main-color);
+  font-size: 12px;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+}
+.todoFormWrapper > label:hover,
+label:active {
+  /* background-color: gold; */
+  opacity: 0.8;
+}
+.todoFormWrapper > label > svg {
+  height: 20px;
+  color: white;
+}
+#file,
+#create {
+  display: none;
+}
+
+/* 투두 */
+/* 리스트 */
 .todoListWrapper {
+  margin-top: 20px;
+  padding: 20px 30px;
+  height: 500px;
+  width: 600px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  /* border: solid 5px black; */
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+}
+.todoListWrapper::-webkit-scrollbar {
+  display: none;
+}
+
+.filterBox {
+  height: 30px;
+  margin-bottom: 20px;
+  border-bottom: 1.5px solid #d8d8d8;
+  display: flex;
+  gap: 1rem;
+  padding-left: 0.5rem;
+}
+.filterBox > li {
+  cursor: pointer;
+}
+
+.todoList {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .todoWrapper {
+  padding: 10px 15px;
+  gap: 15px;
+  /* justify-content: space-between; */
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+}
+.todoWrapper > input {
+  zoom: 1.5;
+}
+.todoWrapper > span {
+  width: 450px;
+  padding-right: 25px;
+  /* font-weight: 600; */
+  /* border: 1px solid black; */
+}
+.todoWrapper > label {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.todoWrapper > label > svg {
+  height: 20px;
+  color: var(--main-color);
+}
+.todoWrapper > label > svg:hover {
+  opacity: 0.8;
+}
+
+/* 기타 스타일 */
+.displayNone {
+  display: none;
+}
+.done {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+.shine {
+  /* font-weight: 600; */
+  color: var(--main-color);
 }
 
 .thumbnail {
-  width: 3rem;
-  height: 3rem;
+  width: 50px;
+  height: 50px;
   object-fit: cover;
   border-radius: 50%;
-  border: 1px solid #eee;
+  /* border: 3px solid #eee; */
 }
